# CondensationMonitorESP32

./: .gitmodules  CMakeLists.txt  README.md
components/platform-esp32/: CMakeLists.txt  main.c
components/platform-esp32/dhtsensor/: dhtplatform.c  dhtsensor.c  dhtsensor.h
components/platform-esp32/os/: os.c  os.h
components/platform-esp32/platform/: platform.c  platform.h
components/platform-esp32/serialpublisher/: serialpublisher.c  serialpublisher.h
